--- a/Модуль А.md
+++ b/Модуль А.md
@@ -1,4 +1,4 @@
-### Модуль А: Базовая автоматизация бизнес-процесса (инвариант)
+### Модуль А: Базовая автоматизация бизнес-процесса
 
 Время на выполнение модуля – 3 часа 30 минут.
 
@@ -10,6 +10,7 @@
 - формирование отчетности по пациентам, находящихся на диспансерном учете, в отношении которых был проведен дистанционный мониторинг и выполненные действия врача.
 
 | **Функциональные требования** | **Значимость для заказчика** |
+
 | --- | --- |
 | Возможность формирования списка пациентов, находящихся на диспансерном наблюдения (по любому виду заболевания), | **3** |
 | Формирование списка пациентов, в отношении которых необходимо осуществлять сбор сведений о текущем состоянии (планирование) | **3** |
