--- a/Модуль Г.md
+++ b/Модуль Г.md
@@ -17,6 +17,8 @@
 | Указание рисков внедрения и предложений по их минимизации (например, резервные сценарии при сбое связи с пациентом) | 2   |
 | Наличие краткой инструкции по использованию модуля для конечного пользователя | 3   |
 
+**Вопросы заказчика:**
+
 **1\. Архитектура и интеграция**
 
 Как модуль взаимодействует с существующей МИС (REST-API, очереди сообщений или прямое подключение к БД) и какие контракты (OpenAPI/Swagger) при этом используются?
